clean-up swagger documentation
