# docs/swagger.json
@@ -3,16 +3,12 @@
     "info": {
         "description": "Fizzbuzz REST API",
         "title": "Go Fizzbuzz REST API",
-        "contact": {
-            "name": "Pierre-Yves BOISBUNON",
-            "url": "https://github.com/py4mac",
-            "email": "pierreyves.boisbunon@gmail.com"
-        },
+        "contact": {},
         "version": "1.0"
     },
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/fizzbuzz": {
+        "/fizzbuzz": {
             "get": {
                 "description": "Record fizzbuzz handler",
                 "consumes": [
@@ -22,7 +18,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "v1"
+                    "fizzbuzz"
                 ],
                 "summary": "Record",
                 "parameters": [
@@ -30,35 +26,35 @@
                         "type": "integer",
                         "description": "Integer1",
                         "name": "int1",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Integer2",
                         "name": "int2",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "integer",
                         "description": "Limit",
                         "name": "limit",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "String1",
                         "name": "str1",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "String2",
                         "name": "str2",
-                        "in": "formData",
+                        "in": "query",
                         "required": true
                     }
                 ],
@@ -68,18 +64,24 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
         },
-        "/api/v1/stats": {
+        "/stats": {
             "get": {
                 "description": "Process status handler",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "v1"
+                    "fizzbuzz"
                 ],
                 "summary": "Process",
                 "responses": {
@@ -88,6 +90,9 @@
                         "schema": {
                             "$ref": "#/definitions/domain.Statistics"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
